[package]
name = "crossfetch"
version = "0.4.1"
authors = ["Deathaclops <deathaclops@gmail.com>"]
description = "A library for fetching local and remote files on both native platforms and WebAssembly"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = "0.12"
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Window", "TextDecoder"] }
js-sys = "0.3"